[gd_scene load_steps=3 format=3 uid="uid://ckd5y7ly3xhd4"]

[ext_resource type="Script" uid="uid://beiusddw65syb" path="res://3d/UI/control.gd" id="1_s47nh"]
[ext_resource type="Texture2D" uid="uid://b33xiv2vci876" path="res://3d/textures/alvo (1).png" id="2_njelr"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_s47nh")

[node name="Reloading_Label" type="Label" parent="."]
visible = false
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = 26.5
offset_right = 38.5
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Reloading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Firerate_Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -89.0
offset_top = 52.0
offset_right = -40.0
offset_bottom = 75.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "6BB/s"

[node name="Backspin_Info" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -281.5
offset_top = -95.0
offset_right = 281.5
grow_horizontal = 2
grow_vertical = 0

[node name="BackspinText_Label" type="Label" parent="Backspin_Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Backspin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Backspin_Info"]
layout_mode = 2
max_value = 0.07
step = 0.001

[node name="Backspin_Label" type="Label" parent="Backspin_Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gun_Info" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -348.0
offset_top = -158.0
offset_right = -188.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="Energy_Label" type="Label" parent="Gun_Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1.49J"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ammo_Label" type="Label" parent="Gun_Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "35/35"

[node name="BBMass_Label" type="Label" parent="Gun_Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.2g"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_njelr")

[node name="GunMode" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -20.0
offset_right = -46.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GunMode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -47.0
offset_right = 20.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Mode1_Label" type="Label" parent="GunMode/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Semi"
horizontal_alignment = 1

[node name="Container" type="Control" parent="GunMode/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="GunMode/VBoxContainer/Container"]
layout_mode = 2
offset_left = 31.0
offset_right = 75.0
offset_bottom = 24.0
rotation = 1.5708

[node name="Mode2_Label" type="Label" parent="GunMode/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Auto"
horizontal_alignment = 1

[connection signal="value_changed" from="Backspin_Info/HSlider" to="." method="_on_h_slider_value_changed"]
